making page responsive

--- a/index.html
+++ b/index.html
@@ -27,45 +27,52 @@
   <body>
     <div class="container">
 
-	<h1 class="logo-right">Subway Beaver</h1>
-	<img id="beaver" src="images/site/beaver-green.png"/>
-	<input type="text" id="email" placeholder="Enter Your email" class="span3">
-	<div class="form-holder-1">
-	    <h2>Morning Commute</h2>
-	    	<label for="depart-time" class="pad-10">When do you plan on leaving this morning?</label>
-		<label class="radio">
-		    <input type="radio" id="depart-time_1" name="morning" value="5-6">5 - 6AM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="depart-time_2" name="morning" value="6-7">6 - 7AM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="depart-time_3" name="morning" value="7-8">7 - 8AM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="depart-time_4" name="morning" value="8-9">8 - 9AM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="depart-time_5" name="morning" value="9-10">9 - 10AM
-		</label><br />
+	<div class="header">
+		<h1 class="logo-right">Subway Beaver</h1>
+		<img id="beaver" src="images/site/beaver-green.png"/>
+		<input type="text" id="email" placeholder="Enter Your email" class="span3">
 	</div>
-	<div class="form-holder-2">
-	    <h2>Evening Commute</h2>
-	    	<label for="return-time" class="pad-10">When do you plan on leaving this evening?</label>
-		<label class="radio">
-		    <input type="radio" id="return-time_1" name="evening" value="5-6">5 - 6PM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="return-time_2" name="evening" value="6-7">6 - 7PM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="return-time_3" name="evening" value="7-8">7 - 8PM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="return-time_4" name="evening" value="8-9">8 - 9PM
-		</label><br />
-		<label class="radio">
-		    <input type="radio" id="return-time_5" name="evening" value="9-10">9 - 10PM
+	<div class="forms">
+		<div class="form-holder-1">
+			<h2>Morning Commute</h2>
+				<label for="depart-time" class="pad-10">When do you plan on leaving this morning?</label>
+			<label class="radio">
+				<input type="radio" id="depart-time_1" name="morning" value="5-6">5 - 6AM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="depart-time_2" name="morning" value="6-7">6 - 7AM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="depart-time_3" name="morning" value="7-8">7 - 8AM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="depart-time_4" name="morning" value="8-9">8 - 9AM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="depart-time_5" name="morning" value="9-10">9 - 10AM
+			</label><br />
+		</div>
+		<div class="form-holder-2">
+			<h2>Evening Commute</h2>
+				<label for="return-time" class="pad-10">When do you plan on leaving this evening?</label>
+			<label class="radio">
+				<input type="radio" id="return-time_1" name="evening" value="5-6">5 - 6PM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="return-time_2" name="evening" value="6-7">6 - 7PM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="return-time_3" name="evening" value="7-8">7 - 8PM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="return-time_4" name="evening" value="8-9">8 - 9PM
+			</label><br />
+			<label class="radio">
+				<input type="radio" id="return-time_5" name="evening" value="9-10">9 - 10PM
+		</div>
+	</div>
+	<div class="form-holder-3">
+		<h2>Which subway line?</h2>
 	</div>
 	<div class="row demo-row clear">
 	    <div class="span3">
