add subway icons + responsive view

--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
 	</div>
 	<div class="form-holder-3">
 		<h2>Which subway line?</h2>
+		<div class="trains">
+			<div class="one-train subway-icon"></div>
+			<div class="two-train subway-icon"></div>
+			<div class="three-train subway-icon"></div>
+			<div class="four-train subway-icon"></div>
+			<div class="five-train subway-icon"></div>
+			<div class="six-train subway-icon"></div>
+			<div class="seven-train subway-icon"></div>
+			<div class="a-train subway-icon"></div>
+			<div class="c-train subway-icon"></div>
+			<div class="e-train subway-icon"></div>
+			<div class="b-train subway-icon"></div>
+			<div class="d-train subway-icon"></div>
+			<div class="f-train subway-icon"></div>
+			<div class="m-train subway-icon"></div>
+			<div class="g-train subway-icon"></div>
+			<div class="j-train subway-icon"></div>
+			<div class="z-train subway-icon"></div>
+			<div class="n-train subway-icon"></div>
+			<div class="q-train subway-icon"></div>
+			<div class="r-train subway-icon"></div>
+			<div class="l-train subway-icon"></div>
+			<div class="s-train subway-icon"></div>
+		</div>
 	</div>
 	<div class="row demo-row clear">
 	    <div class="span3">
