--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<a href="#" class="btn btn-large btn-block dark-green">Submit</a>
 	    </div>
 	</div> <!-- /row -->
-    </div
+</div>
 	<script src="js/jquery-ui-1.10.0.custom.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="js/jquery.dropkick-1.0.0.js"></script>
