add subway.js file in index

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 	<script src="js/jquery.placeholder.js"></script>
 	<script src="http://vjs.zencdn.net/c/video.js"></script>
 	<script src="js/application.js"></script>
+	<script src="js/subway.js"></script>
 	<!--[if lt IE 8]>
 	  <script src="js/icon-font-ie7.js"></script>
 	  <script src="js/icon-font-ie7-24.js"></script>
